force-app/main/default/objects/Equipment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Representative</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dealer Representative must be a contact tied to the Dealer on this Equipment record.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Dealer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>