force-app/main/default/objects/Equipment__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>