force-app/main/default/objects/Equipment__c/fields/RPO_Payments__c.field-meta.xml
<CustomField>
    <fullName>RPO_Payments__c</fullName>
    <label>RPO Payments</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>