force-app/main/default/objects/Equipment__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>BLANKVALUE(Price__c, 0) + BLANKVALUE(Tax__c, 0) - BLANKVALUE(RPO_Payments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>