force-app/main/default/objects/Equipment__c/validationRules/validate_year.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_year</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Year__c, &quot;[0-9]{1,4}&quot;))</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>not a valid value for Year</errorMessage>
</ValidationRule>