force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Year__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Price__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>